<resources>
    <string name="app_name" translatable="false">NBAPP</string>
    <string name="action_settings">About me</string>
    <string name="title_activity_logo" translatable="false">LogoActivity</string>
    <string name="title_activity_listado" translatable="false">ListadoActivity</string>
    <string name="title_activity_formulario" translatable="false">FormularioActivity</string>
    <string name="descripcionAbout">Somos una compañia consolidada en el mundo deportivo y por tal motivo hemos decidido dar el salto a las aplicaciones para llevar a nuestros usuarios al siguiente nivel infornacion seg a seg</string>
    <string name="emailAbout">NBApp.gmail.com</string>
    <string name="contactaAbout">Contacta con nosotros</string>
    <string name="ntelefonoAbout">935848945</string>
    <string name="conferenciaFormulario">Conferencia</string>
    <string name="hintFechaFormu">Fecha de creación</string>
    <string name="tituloFormu">AÑADIR EQUIPO</string>
    <string name="tSalarialFormu">Tope salarial</string>
    <string name="EsteFormu">ESTE</string>
    <string name="OesteFormu">OESTE</string>
    <string name="GuardarFormu">GUARDAR</string>
    <string name="selecImagenFormu">Selecionar imagen</string>
    <string name="nombreFormu">Nombre del equipo</string>
    <string name="nDuenoFormu">Nombre del dueño</string>
    <string name="conferenciaFormu">Conferencia</string>
    <string name="cancelarFormu">ELIMINAR</string>
    <string name="filtrarNombre">Filtrar por Nombre</string>
    <string name="fechaCreacionSearch">Fecha de creación</string>
    <string name="filtrarSearch">Filtrar</string>
    <string name="buscarSearch">BUSCAR</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="add_new_option">add_new_option</string>
    <string name="your_option">your_option</string>
    <string name="cancel">cancel</string>

</resources>
