<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.AboutMeActivityMenu"
    tools:showIn="@layout/activity_about_me_menu">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="76dp"
        android:text="@string/ntelefonoAbout"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/ntelefonoAbout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="165dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="@string/contactaAbout"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/contactaAbout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="212dp"
        android:text="@string/emailAbout"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.6"
        tools:text="@string/emailAbout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="233dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text="¿Quienes somos?"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="¿Quienes somos?" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="274dp"
        android:layout_height="236dp"
        android:layout_marginTop="128dp"
        android:text="@string/descripcionAbout"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/descripcionAbout" />
</androidx.constraintlayout.widget.ConstraintLayout>