<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.SearchActivityMenu"
    tools:showIn="@layout/activity_search_menu">

    <ImageButton
        android:id="@+id/imageFecha"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Conferencia"
        app:srcCompat="@android:drawable/ic_menu_day" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="274dp"
        android:layout_height="73dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloFiltrar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filtrarNombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/FechaSearch"
        android:layout_width="208dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/fechaCreacionSearch"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Conferencia" />

    <Spinner
        android:id="@+id/Conferencia"
        android:layout_width="275dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/TituloFiltrar"
        android:layout_width="98dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/filtrarSearch"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:text="@string/buscarSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FechaSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>